# Agentic_Support

./: .env.example  .gitignore  PRODUCTION_COMPLETION_SUMMARY.md  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
ai-support-agent/: .gitignore  README.md  pyproject.toml  requirements.txt
ai-support-agent/agents/: base.py
ai-support-agent/agents/escalation/: __init__.py  agent.py  prompts.py  schemas.py
ai-support-agent/agents/intent/: __init__.py  agent.py  evaluation.py  prompts.py  schemas.py
ai-support-agent/agents/knowledge/: __init__.py  agent.py  evaluation.py  prompts.py  schemas.py
ai-support-agent/agents/orders/: __init__.py  agent.py  prompts.py  schemas.py
ai-support-agent/agents/tickets/: __init__.py  agent.py  prompts.py  schemas.py
ai-support-agent/app/: dependencies.py  main.py
ai-support-agent/app/api/: chat.py  sessions.py  webhooks.py
ai-support-agent/app/middleware/: auth.py  logging.py  rate_limit.py  request_context.py
ai-support-agent/config/: rag.yaml  rollout.yaml  settings.py  tools.yaml
ai-support-agent/domain/: policies.py
ai-support-agent/events/: consumers.py  schemas.py
ai-support-agent/execution/: dispatcher.py  retries.py
ai-support-agent/llm/: __init__.py  fallback.py  router.py
ai-support-agent/memory/: manager.py  store.py  summarizer.py  validators.py
ai-support-agent/observability/: logger.py
ai-support-agent/orchestration/: ambiguity.py  confidence.py  context.py  execution_plan.py  policies.py  router.py
ai-support-agent/scripts/: backfill_embeddings.py
(+208 files in other folders)
